# bert-cli

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
.github/workflows/: docker.yml
src/: ai.rs  api.rs  bart.rs  bin.rs  config.rs  gpt2.rs  gptneo.rs  gptneo1.rs  gptneo2.rs  lib.rs  m2m100.rs  mbart.rs  prophetnet.rs
static/: index.css  index.html  index.js
