[package]
name = "bert-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bert-cli"
path = "src/bin.rs"
test = false
bench = false

[dependencies]
async-trait = "0.1.52"
rust-bert = { version = "0.17" }
serde = "1"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
tch = { version = "~0.6.1" }
