[package]
edition = "2021"
name = "bert-cli"
version = "0.1.0"

[[bin]]
bench = false
name = "bert-cli"
path = "src/bin.rs"
test = false

[[bin]]
bench = false
name = "bert-web"
path = "src/api.rs"
test = false

[dependencies]
async-trait = "0.1.52"
rocket = {version = "0.5.0-rc.1", default-features = false, features = ["json"]}
rocket_okapi = {version = "0.8.0-alpha-1", features = ["swagger", "rapidoc"]}
rocket-include-static-resources = { version = "0.10.0", features=["cache"] }
rust-bert = {version = "0.17", git = "https://github.com/guillaume-be/rust-bert" }
serde = "1"
structopt = {version = "0.3", default-features = false}
tch = {version = "0.7"}
tokio = {version = "1", features = ["full"]}
